--- a/MainMenu/app/src/main/res/layout/ruluser.xml
+++ b/MainMenu/app/src/main/res/layout/ruluser.xml
@@ -39,17 +39,16 @@
 
         <TextView
             android:id="@+id/mitems_header"
-            android:layout_width="350dp"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="@string/Res_Header"
             android:textAlignment="center"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintVertical_bias="0.1"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -74,14 +73,14 @@
 
         <TextView
             android:id="@+id/mitems_header2"
-            android:layout_width="350dp"
+            android:layout_width="200dp"
             android:layout_height="50dp"
             android:text="@string/Borrow_Header"
             android:textAlignment="center"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="#FFFFFF"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintVertical_bias="0.6"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -108,17 +107,17 @@
 
         <Spinner
             android:id="@+id/RoleSpn"
-            android:layout_width="77dp"
+            android:layout_width="160dp"
             android:layout_height="45dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.971"
+            app:layout_constraintHorizontal_bias="0.98"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.071" />
@@ -129,22 +128,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintTop_toBottomOf="@id/TopofScreen">
-
-        <Button
-            android:id="@+id/ruluser_backtomenu_btn"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:text="@string/BackToMenu_Button"
-            android:background="@color/White"
-            android:textColor="@color/Black"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </android.support.constraint.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@id/TopofScreen"/>
 
 
 </android.support.constraint.ConstraintLayout>
