--- a/MainMenu/app/src/main/res/layout/my_items.xml
+++ b/MainMenu/app/src/main/res/layout/my_items.xml
@@ -95,22 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.15"
-        app:layout_constraintTop_toBottomOf="@id/TopofScreen">
-
-        <Button
-            android:id="@+id/mitems_backtomenu_btn"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:text="@string/BackToMenu_Button"
-            android:background="@color/White"
-            android:textColor="@color/Black"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </android.support.constraint.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@id/TopofScreen"/>
 
 
 </android.support.constraint.ConstraintLayout>
